add link to files in index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
+
 <html>
 <head><title> Home Page1 </title></head>
 
  <body>
 <h1> Dayche <h1>
+<a href= "file"> </a>
+<a href= "newfile"> newfile </a> 
 </body> </html>
 
        
